--- a/index.html
+++ b/index.html
@@ -6,148 +6,157 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Get $500 Wingstop Gift Card</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-  :root {
-    /* Wingstop Brand */
-    --primary: #006b3f;        /* Wingstop Green */
-    --primary-dark: #004f2e;
-    --accent: #f2c400;         /* Gold underline accent */
-    --bg: #ffffff;
-    --text: #0f0f0f;
-    --muted: #6b6b6b;
-    --border: #e3e3e3;
-  }
+<style>
+:root {
+  --primary: #006b3f;
+  --primary-dark: #004f2e;
+  --accent: #f2c400;
+  --bg: #ffffff;
+  --text: #0f0f0f;
+  --muted: #6b6b6b;
+  --border: #e3e3e3;
+}
 
-  * {
-    box-sizing: border-box;
-  }
+* { box-sizing: border-box; }
 
-  body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: var(--bg);
-    color: var(--text);
-  }
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background: var(--bg);
+  color: var(--text);
+}
 
-  /* Top utility bar */
-  .top-bar {
-    background: var(--primary);
-    color: #fff;
-    padding: 10px 24px;
-    font-size: 13px;
-    font-weight: 600;
-    display: flex;
-    justify-content: flex-end;
-    gap: 28px;
-    letter-spacing: .4px;
-  }
+/* Mobile gate */
+#desktop-message {
+  display: none;
+  text-align: center;
+  padding: 80px 20px;
+}
 
-  .top-bar a {
-    color: #fff;
-    text-decoration: none;
-  }
+@media (min-width: 768px) {
+  #mobile-content { display: none; }
+  #desktop-message { display: block; }
+}
 
-  /* Main header */
-  .header {
-    background: #fff;
-    border-bottom: 1px solid var(--border);
-    padding: 18px 32px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+/* Layout */
+.container {
+  max-width: 720px;
+  margin: auto;
+  padding: 36px 20px 64px;
+  text-align: center;
+}
 
-  /* Logo area */
-  .logo {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    font-weight: 800;
-    letter-spacing: .6px;
-  }
+/* Brand */
+.brand {
+  font-size: 22px;
+  font-weight: 800;
+  letter-spacing: .6px;
+  color: var(--primary);
+  margin-bottom: 24px;
+}
 
-  /* Nav */
-  .nav {
-    display: flex;
-    gap: 32px;
-  }
+/* Card */
+.card-wrap {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 28px;
+}
 
-  .nav a {
-    text-decoration: none;
-    color: var(--text);
-    font-weight: 700;
-    font-size: 15px;
-    letter-spacing: .5px;
-    position: relative;
-    padding-bottom: 6px;
-  }
+.card-mask {
+  background: #fff;
+  padding: 14px;
+  border-radius: 20px;
+  box-shadow: 0 18px 40px rgba(0,0,0,.12);
+}
 
-  .nav a.active::after,
-  .nav a:hover::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background: var(--accent);
-  }
+.card-mask img {
+  width: 260px;
+  max-width: 100%;
+  border-radius: 14px;
+  display: block;
+}
 
-  /* Search icon wrapper */
-  .search {
-    font-size: 18px;
-    cursor: pointer;
-  }
+/* Headings */
+h1 {
+  font-size: 32px;
+  font-weight: 800;
+  margin-bottom: 12px;
+}
 
-  /* Page container */
-  .container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 64px 24px;
-  }
+h1 span {
+  color: var(--primary);
+}
 
-  /* Section titles */
-  h1, h2 {
-    font-weight: 800;
-    letter-spacing: .6px;
-  }
+.sub {
+  font-size: 15px;
+  color: var(--muted);
+  margin-bottom: 28px;
+}
 
-  h1 {
-    font-size: 32px;
-    margin-bottom: 12px;
-  }
+/* CTA */
+.cta {
+  background: var(--primary);
+  color: #fff;
+  border: none;
+  padding: 18px 36px;
+  font-size: 17px;
+  font-weight: 800;
+  border-radius: 999px;
+  cursor: pointer;
+  box-shadow: 0 16px 34px rgba(0,107,63,.45);
+}
 
-  h2 {
-    font-size: 22px;
-    margin-bottom: 16px;
-  }
+.cta:hover {
+  background: var(--primary-dark);
+}
 
-  /* Divider */
-  .divider {
-    width: 60px;
-    height: 3px;
-    background: var(--primary);
-    margin: 16px 0 32px;
-  }
+/* How it works */
+.how {
+  margin-top: 48px;
+}
 
-  /* Footer */
-  .footer {
-    border-top: 1px solid var(--border);
-    padding: 40px 24px;
-    font-size: 13px;
-    color: var(--muted);
-    text-align: center;
-  }
+.how h2 {
+  font-size: 22px;
+  font-weight: 800;
+  margin-bottom: 24px;
+}
 
-  @media (max-width: 768px) {
-    .nav {
-      gap: 20px;
-    }
+/* Steps */
+.step {
+  background: #fff;
+  border-radius: 18px;
+  padding: 18px 20px;
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  margin-bottom: 14px;
+  box-shadow: 0 8px 18px rgba(0,0,0,.06);
+  text-align: left;
+}
 
-    h1 {
-      font-size: 26px;
-    }
-  }
+.num {
+  min-width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background: var(--primary);
+  color: #fff;
+  font-weight: 800;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Final CTA */
+.final-cta {
+  margin-top: 32px;
+}
+
+/* Footer */
+.footer {
+  font-size: 12px;
+  color: var(--muted);
+  margin-top: 40px;
+}
 </style>
 
 </head>
