--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ body {
   <h2>Frequently Asked Questions</h2>
 
   <div class="faq-item">
-    <div class="faq-q">What is this programme? <span class="faq-icon">+</span></div>
-    <div class="faq-a">This is a Product Reviewer programme where participants provide feedback on partner services for a chance to receive Wingstop Giftcard.</div>
+    <div class="faq-q">What is this program? <span class="faq-icon">+</span></div>
+    <div class="faq-a">This is a Feedback program where participants provide feedback on partner services for a chance to receive Wingstop Giftcard.</div>
   </div>
 
   <div class="faq-item">
