--- a/index.html
+++ b/index.html
@@ -255,14 +255,14 @@ body {
   <div class="body">
     <div class="prize">
       <h1>Up to $500</h1>
-      <div class="subtitle">WINGSTOP DELIVERY GIFTCARD</div>
+      <div class="subtitle">WINGSTOP GIFTCARD</div>
     </div>
 
     <ul class="steps">
       <li><span class="step-num">1</span><span>Continue to Offer</span></li>
       <li><span class="step-num">2</span><span>Enter basic details</span></li>
-      <li><span class="step-num">3</span><span>Complete 4–5 partner offers</span></li>
-      <li><span class="step-num">4</span><span>Get a chance to receive Giftcard</span></li>
+      <li><span class="step-num">3</span><span>Complete 5-6 partner offers</span></li>
+      <li><span class="step-num">4</span><span>receive a Giftcard</span></li>
     </ul>
 
     <button type="button" class="cta-btn" onclick="redirect()">Continue</button>
